--- a/MNIST_Tensorboard.ipynb
+++ b/MNIST_Tensorboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -14,20 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
       "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
       "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
       "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
       "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
@@ -38,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -46,8 +42,8 @@
    "source": [
     "def conv_layer(input,channels_in,channels_out,name =\"conv\"):\n",
     "    with tf.name_scope(name):\n",
-    "        w = tf.Variable(tf.zeros([5,5,channels_in,channels_out]),name =\"W\")\n",
-    "        b = tf.Variable(tf.zeros([channels_out]),name =\"B\")\n",
+    "        w = tf.Variable(tf.truncated_normal([5,5,channels_in,channels_out] ,stddev=0.1),name =\"W\")\n",
+    "        b = tf.Variable(tf.constant(0.1,shape= [channels_out]),name =\"B\")\n",
     "        conv = tf.nn.conv2d(input,w,strides = [1,1,1,1],padding=\"SAME\")\n",
     "        act = tf.nn.relu(conv+b)\n",
     "        tf.summary.histogram(\"weights\",w)\n",
@@ -59,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -67,8 +63,8 @@
    "source": [
     "def fc_layer(input,channels_in,channels_out,name =\"fc\"):\n",
     "    with tf.name_scope(name):\n",
-    "        w = tf.Variable(tf.zeros([channels_in,channels_out]),name =\"W\")\n",
-    "        b = tf.Variable(tf.zeros([channels_out]),name=\"B\")\n",
+    "        w = tf.Variable(tf.truncated_normal([channels_in,channels_out],stddev=0.1),name =\"W\")\n",
+    "        b = tf.Variable(tf.constant(0.1,shape=[channels_out]),name=\"B\")\n",
     "        act = tf.nn.relu(tf.matmul(input,w) + b)\n",
     "\n",
     "        return act"
@@ -76,17 +72,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0 ,training accuracy 0.09\n",
-      "step 500 ,training accuracy 0.08\n",
-      "step 1000 ,training accuracy 0.11\n",
-      "step 1500 ,training accuracy 0.07\n"
+      "step 0 ,training accuracy 0.15\n",
+      "step 500 ,training accuracy 0.1\n",
+      "step 1000 ,training accuracy 0.09\n",
+      "step 1500 ,training accuracy 0.08\n",
+      "step 2000 ,training accuracy 0.07\n",
+      "step 2500 ,training accuracy 0.06\n",
+      "step 3000 ,training accuracy 0.13\n",
+      "step 3500 ,training accuracy 0.02\n",
+      "step 4000 ,training accuracy 0.28\n",
+      "step 4500 ,training accuracy 0.35\n",
+      "step 5000 ,training accuracy 0.39\n",
+      "step 5500 ,training accuracy 0.5\n",
+      "step 6000 ,training accuracy 0.57\n",
+      "step 6500 ,training accuracy 0.62\n",
+      "step 7000 ,training accuracy 0.65\n",
+      "step 7500 ,training accuracy 0.56\n",
+      "step 8000 ,training accuracy 0.59\n",
+      "step 8500 ,training accuracy 0.52\n",
+      "step 9000 ,training accuracy 0.55\n",
+      "step 9500 ,training accuracy 0.61\n",
+      "step 10000 ,training accuracy 0.57\n",
+      "step 10500 ,training accuracy 0.59\n",
+      "step 11000 ,training accuracy 0.58\n",
+      "step 11500 ,training accuracy 0.74\n",
+      "step 12000 ,training accuracy 0.66\n",
+      "step 12500 ,training accuracy 0.63\n",
+      "step 13000 ,training accuracy 0.6\n",
+      "step 13500 ,training accuracy 0.59\n",
+      "step 14000 ,training accuracy 0.6\n",
+      "step 14500 ,training accuracy 0.66\n",
+      "step 15000 ,training accuracy 0.64\n",
+      "step 15500 ,training accuracy 0.64\n",
+      "step 16000 ,training accuracy 0.58\n",
+      "step 16500 ,training accuracy 0.6\n",
+      "step 17000 ,training accuracy 0.62\n",
+      "step 17500 ,training accuracy 0.55\n",
+      "step 18000 ,training accuracy 0.6\n",
+      "step 18500 ,training accuracy 0.48\n",
+      "step 19000 ,training accuracy 0.63\n",
+      "step 19500 ,training accuracy 0.57\n"
      ]
     }
    ],
@@ -121,16 +153,19 @@
     "    tf.summary.scalar(\"accuracy\",accuracy)\n",
     "    \n",
     "with tf.Session() as sess:\n",
+    "    merged_summary =  tf.summary.merge_all()\n",
     "    writer = tf.summary.FileWriter(\"/tmp/mnist_demo/2\")\n",
     "    writer.add_graph(sess.graph)\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "\n",
-    "    for i in range(2000):\n",
+    "    for i in range(20000):\n",
     "        batch = mnist.train.next_batch(100)\n",
     "\n",
     "        if i % 500 == 0:\n",
     "            [train_accuracy] = sess.run([accuracy],feed_dict =  {x:batch[0] , y:batch[1]})\n",
+    "            summary = sess.run(merged_summary , feed_dict={x:batch[0],y:batch[1]})\n",
     "            print(\"step %d ,training accuracy %g\" % (i,train_accuracy))\n",
+    "            writer.add_summary(summary,i)\n",
     "\n",
     "        sess.run(train_step,feed_dict = {x:batch[0],y:batch[1]})"
    ]
